   prevent data races between a scheduler thread and a device thread using these
   structures.
 * Added macros to get the version Phobos from the API (major, minor and patch)
   and macros to check the current version is higher than a given one
 * We manage a last locate timestamp and the corresponding delay in the LRS to
   prevent after locate resource starvation.

## 3.1.0
 * limited number of write per grouping: the new "fifo_max_write_per_grouping"
   configuration parameter allows to limit the number of concurrent writes per
   grouping on one phobosd instance. The default 0 value reproduces the
   previous unlimited behaviour.
 * fix large sends (e.g. during a 'lib scan" with over 1500 slots)
 * handle external command errors better by using the glib2
   spawn_check_wait_status function
 * use the io_block_size parameter to set the write size of new objects on media

## 3.0.0
 * WARNING: the db schema moves from 2.2 to 3.0 and a migration is needed
 * WARNING: TLC section names in the configuration file are changed from
   [tlc_libname] to [tlc "libname"]
 * WARNING: phobos_locate has a new argument: the copy_name. The API
   compatibility is broken. (The lhsm_phobos copytool must be also updated.)
 * object copy create/list/delete is available, with "--copy-name" at locate,
   put and get, "get_preferred_order" configuration option taken into account at
   get
 * config man page is now available
 * autocompletion is added to CLI (check the README.md for more information on
   how to activate it)
 * the CLI arguments are homogenized between commands operating on the same
   target
 * fix client crash on "del --hard"
 * cli,api: default library for lib scan/refresh and ldm open is available
 * lrs: fix fifo find_write_device for unloaded tape without grouping
 * raid: check the real size of an extent against the expected size
 * locate: avoid locking media not compatible
 * fix miscellaneous memory leaks fix